[package]
name = "jear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bempline = { path= "../bempline" }
camino = "1.1.1"
confindent = "2.2.0"
quark = { path="../quark" }

[dependencies.time]
version = "0.3.17"
features = ["formatting", "macros", "parsing"]